2012-02-24  Albert Chu <chu11@llnl.gov>

	* common/miscutil/error.h, common/miscutil/error.c
	(err_init_exit_value): New function.

	* ipmidetect/ipmidetect.c (main): Exit with value 2 on errors.

	* ipmipower/: Properly exit with 1 when an error occurs on IPMI
	errors instead of just system errors.

	* man/: Add exit value diagnostics information to most manpages.

	* ipmipower/: Code cleanup for consistency to libipmiconsole code.
	
2012-02-23  Albert Chu <chu11@llnl.gov>

	Merge sha256 branch.

	* Support Cipher Suite 15 and 16 globally.

	* Add details of Cipher Suite 18 and 19 globally.

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c
	(bmc_config_rmcpplus_conf_privilege_section_get): Add
	configuration for Maximum_Privilege_Cipher_Suite_Id_15.
	
2012-02-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c
	(id_checkout): Fix cipher suite privilege
	configuration corner cases workaround on HP DL145.

	* man/manpage-common-workaround-outofband-20-text.man: Document
	Intel S2600JF/Appro 512X workaround.

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c (_rmcpplus_cipher_suite_id_privilege_setup):
	Workaround cipher suite privilege configuration bug in Intel
	S2600JF/Appro 512X.
	
2012-02-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c (common_parse_opt),
	common/toolcommon/tool-config-file-common.c
	(_config_file_cipher_suite_id): Differentiate between invalid and
	unsupported cipher suites in error message output.
	
2012-02-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/ipmi-sensors.8.pre.in: Update information concerning
	'discretereading' workaround.

	* ipmi-sensors/: Code cleanup, rename 'reading' to
	'sensor_reading' for consistency.

	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix packet layout for
	tmpl_cmd_get_lan_configuration_parameters_rmcpplus_messaging_cipher_suite_entry_support_rs.
	