@@ -5,7 +5,6 @@ ooo - priority code cleanup that should be done
 branches to merge
 -----------------
 altport
-selreservation
 
 FreeIPMI FAQ/documentation
 --------------------------
